--- a/Transcribe/Base.lproj/LaunchScreen.storyboard
+++ b/Transcribe/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,14 +16,70 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qFT-li-Mah">
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TRANSCRIBE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tXd-jj-Zne">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="KoI-jh-Cl5"/>
+                                            <constraint firstAttribute="width" constant="145" id="QRd-R1-7eh"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="98t-gT-rBC"/>
+                                    <constraint firstItem="tXd-jj-Zne" firstAttribute="centerY" secondItem="qFT-li-Mah" secondAttribute="centerY" id="RZ3-bD-z9S"/>
+                                    <constraint firstItem="tXd-jj-Zne" firstAttribute="centerX" secondItem="qFT-li-Mah" secondAttribute="centerX" id="gf2-Bx-VFa"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLAY &amp; TRANSCRIBE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ls0-MV-6ig">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="xeE-9R-bvr"/>
+                                    <constraint firstAttribute="width" constant="195" id="yQ5-Vt-efI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Tap the button below to transcribe the audio embedded in this app." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="uPC-ls-LI5">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d79-kT-fTE">
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="Glx-hw-ncb"/>
+                                    <constraint firstAttribute="height" constant="60" id="v9L-DA-hFD"/>
+                                </constraints>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="qFT-li-Mah" secondAttribute="trailing" id="4m3-CF-LxZ"/>
+                            <constraint firstItem="ls0-MV-6ig" firstAttribute="top" secondItem="d79-kT-fTE" secondAttribute="bottom" constant="8" id="B1O-ff-euf"/>
+                            <constraint firstItem="qFT-li-Mah" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="MKs-Qs-W5o"/>
+                            <constraint firstItem="ls0-MV-6ig" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="MMu-b1-opQ"/>
+                            <constraint firstItem="qFT-li-Mah" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="chQ-x4-Fdv"/>
+                            <constraint firstItem="uPC-ls-LI5" firstAttribute="top" secondItem="qFT-li-Mah" secondAttribute="bottom" constant="20" id="eYh-Bi-9MF"/>
+                            <constraint firstItem="uPC-ls-LI5" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="lCI-Qz-MhF"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="ls0-MV-6ig" secondAttribute="bottom" constant="8" id="ogy-ed-CLo"/>
+                            <constraint firstItem="uPC-ls-LI5" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="pJt-qn-nIM"/>
+                            <constraint firstItem="d79-kT-fTE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="t39-f1-PiM"/>
+                            <constraint firstItem="d79-kT-fTE" firstAttribute="top" secondItem="uPC-ls-LI5" secondAttribute="bottom" constant="20" id="u36-rV-qw6"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.5" y="375"/>
         </scene>
     </scenes>
 </document>
